<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Ordered by how often someone actually changes a thing: what plays and
         how it starts, then gestures, then subtitles, then the online features,
         then history, and the things that can break playback last. -->

    <PreferenceCategory app:title="@string/pref_appearance_header">

        <ListPreference
            app:key="accentColor"
            app:defaultValue="orange"
            app:entries="@array/accent_entries"
            app:entryValues="@array/accent_values"
            app:title="@string/pref_accent"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:selectable="false"
            app:summary="@string/pref_accent_note" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_playback_header">

        <ListPreference
            app:key="playbackEngine"
            app:defaultValue="auto"
            app:entries="@array/playback_engine_entries"
            app:entryValues="@array/playback_engine_values"
            app:title="@string/pref_playback_engine"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="playbackEngineNote"
            app:selectable="false"
            app:summary="@string/pref_engine_note" />

        <SwitchPreferenceCompat
            app:key="adaptiveBuffering"
            app:defaultValue="true"
            app:summaryOn="@string/pref_adaptive_buffering_on"
            app:summaryOff="@string/pref_adaptive_buffering_off"
            app:title="@string/pref_adaptive_buffering" />

        <SwitchPreferenceCompat
            app:key="askResume"
            app:defaultValue="true"
            app:summaryOn="@string/pref_ask_resume_on"
            app:summaryOff="@string/pref_ask_resume_off"
            app:title="@string/pref_ask_resume" />

        <SwitchPreferenceCompat
            app:key="frameRateMatching"
            app:defaultValue="false"
            app:summaryOn="@string/pref_framerate_matching_on"
            app:summaryOff="@string/pref_framerate_matching_off"
            app:title="@string/pref_framerate_matching" />

        <SwitchPreferenceCompat
            app:key="autoPiP"
            app:defaultValue="false"
            app:summaryOn="@string/pref_auto_pip_on"
            app:summaryOff="@string/pref_auto_pip_off"
            app:title="@string/pref_auto_pip" />

        <SwitchPreferenceCompat
            app:key="volumeBoost"
            app:defaultValue="false"
            app:summaryOn="@string/pref_volume_boost_on"
            app:summaryOff="@string/pref_volume_boost_off"
            app:title="@string/pref_volume_boost" />

        <SwitchPreferenceCompat
            app:key="alwaysOnClock"
            app:defaultValue="false"
            app:summaryOn="@string/pref_clock_on"
            app:summaryOff="@string/pref_clock_off"
            app:title="@string/pref_clock" />

        <SwitchPreferenceCompat
            app:key="volumeKeysPlayerOnly"
            app:defaultValue="false"
            app:summaryOn="@string/pref_volume_keys_on"
            app:summaryOff="@string/pref_volume_keys_off"
            app:title="@string/pref_volume_keys" />

        <SwitchPreferenceCompat
            app:key="keepScreenOn"
            app:defaultValue="false"
            app:summaryOn="@string/pref_keep_screen_on_on"
            app:summaryOff="@string/pref_keep_screen_on_off"
            app:title="@string/pref_keep_screen_on" />

        <SwitchPreferenceCompat
            app:key="skipSilence"
            app:defaultValue="false"
            app:summaryOn="@string/pref_skip_silence_on"
            app:summaryOff="@string/pref_skip_silence_off"
            app:title="@string/pref_skip_silence" />

        <SwitchPreferenceCompat
            app:key="repeatToggle"
            app:defaultValue="false"
            app:summary="@string/pref_repeat_toggle_summary"
            app:title="@string/pref_repeat_toggle" />

        <ListPreference
            app:key="languageAudio"
            android:defaultValue="device"
            app:title="@string/pref_language_audio"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="languageAudioPriority"
            app:defaultValue=""
            app:title="@string/pref_language_audio_priority"
            app:summary="@string/pref_language_audio_priority_summary"
            app:dialogMessage="@string/pref_language_priority_hint" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_gestures_header">

        <SeekBarPreference
            app:key="doubleTapSeekSeconds"
            app:defaultValue="10"
            android:max="60"
            app:min="5"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true"
            app:summary="@string/pref_double_tap_seconds_summary"
            app:title="@string/pref_double_tap_seconds" />

        <Preference
            app:selectable="false"
            app:summary="@string/pref_lock_hint" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_subtitle_header">

        <Preference
            app:selectable="false"
            app:summary="@string/pref_subtitle_message" />

        <SwitchPreferenceCompat
            app:key="subtitleCustomFontEnabled"
            app:defaultValue="false"
            app:title="@string/pref_custom_subtitle_font" />

        <Preference
            app:key="subtitleCustomFontChoose"
            app:enabled="false"
            app:summary="@string/pref_custom_subtitle_font_not_set"
            app:title="@string/pref_choose_custom_font" />

        <Preference
            app:key="subtitleFolderChoose"
            app:title="@string/pref_subtitle_folder" />

        <Preference
            app:title="@string/pref_captioning_preferences">
            <intent android:action="android.settings.CAPTIONING_SETTINGS" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_online_header">

        <Preference
            app:key="setupFromPhone"
            app:title="@string/pref_setup_phone"
            app:summary="@string/pref_setup_phone_summary" />

        <Preference
            app:key="checkEverything"
            app:title="@string/pref_check_all"
            app:summary="@string/pref_check_all_summary" />

        <Preference
            app:selectable="false"
            app:summary="@string/pref_online_note" />

        <EditTextPreference
            app:key="apiKeyTmdb"
            app:title="@string/pref_key_tmdb"
            app:dialogMessage="@string/pref_key_tmdb_dialog" />

        <ListPreference
            app:key="identifyMode"
            app:defaultValue="auto"
            app:entries="@array/identify_mode_entries"
            app:entryValues="@array/identify_mode_values"
            app:title="@string/pref_identify"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:selectable="false"
            app:summary="@string/pref_identify_note" />

        <SwitchPreferenceCompat
            app:key="subtitleAutoSearch"
            app:defaultValue="false"
            app:summaryOn="@string/pref_auto_search_on"
            app:summaryOff="@string/pref_auto_search_off"
            app:title="@string/pref_auto_search" />

        <ListPreference
            app:key="subtitleLanguage"
            app:defaultValue="en"
            app:entries="@array/subtitle_language_entries"
            app:entryValues="@array/subtitle_language_values"
            app:title="@string/pref_subtitle_language"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="languageSubtitlePriority"
            app:defaultValue=""
            app:title="@string/pref_language_subtitle_priority"
            app:summary="@string/pref_language_subtitle_priority_summary"
            app:dialogMessage="@string/pref_language_priority_hint" />

        <SwitchPreferenceCompat
            app:key="prefillSearch"
            app:defaultValue="true"
            app:summaryOn="@string/pref_prefill_on"
            app:summaryOff="@string/pref_prefill_off"
            app:title="@string/pref_prefill" />

        <SwitchPreferenceCompat
            app:key="linkSubtitleAndInfo"
            app:defaultValue="true"
            app:summaryOn="@string/pref_link_titles_on"
            app:summaryOff="@string/pref_link_titles_off"
            app:title="@string/pref_link_titles" />

        <SwitchPreferenceCompat
            app:key="overlayOnPause"
            app:defaultValue="false"
            app:summaryOn="@string/pref_overlay_on"
            app:summaryOff="@string/pref_overlay_off"
            app:title="@string/pref_overlay" />

        <SeekBarPreference
            app:key="overlayDelaySeconds"
            app:defaultValue="3"
            android:max="15"
            app:min="0"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/pref_overlay_delay_summary"
            app:title="@string/pref_overlay_delay" />

        <SwitchPreferenceCompat
            app:key="skipSegments"
            app:defaultValue="true"
            app:summaryOn="@string/pref_skip_on"
            app:summaryOff="@string/pref_skip_off"
            app:title="@string/pref_skip" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_subtitle_sources_header">

        <Preference
            app:selectable="false"
            app:summary="@string/pref_sources_note" />

        <EditTextPreference
            app:key="apiKeyOpenSubtitles"
            app:title="@string/pref_key_opensubtitles"
            app:dialogMessage="@string/pref_key_opensubtitles_dialog" />

        <EditTextPreference
            app:key="apiKeyOpenSubtitlesUser"
            app:title="@string/pref_key_opensubtitles_user" />

        <EditTextPreference
            app:key="apiKeyOpenSubtitlesPassword"
            app:title="@string/pref_key_opensubtitles_password" />

        <EditTextPreference
            app:key="apiKeySubdl"
            app:title="@string/pref_key_subdl"
            app:dialogMessage="@string/pref_key_subdl_dialog" />

        <EditTextPreference
            app:key="apiKeyWyzie"
            app:title="@string/pref_key_wyzie"
            app:dialogMessage="@string/pref_key_wyzie_dialog" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_addons_header">

        <Preference
            app:key="subtitleAddons"
            app:summary="@string/pref_addons_summary"
            app:title="@string/pref_addons" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_history_header">

        <Preference
            app:key="historyOpen"
            app:title="@string/pref_history" />

        <SwitchPreferenceCompat
            app:key="historyKeepFailed"
            app:defaultValue="false"
            app:summaryOn="@string/pref_history_failed_on"
            app:summaryOff="@string/pref_history_failed_off"
            app:title="@string/pref_history_failed" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_dangerous_header">

        <Preference
            app:selectable="false"
            app:summary="@string/pref_dangerous_warning" />

        <ListPreference
            app:defaultValue="auto"
            app:entries="@array/file_access_entries"
            app:entryValues="@array/file_access_values"
            app:key="fileAccess"
            app:title="@string/pref_file_access"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/decoder_priority_entries"
            app:entryValues="@array/decoder_priority_values"
            app:key="decoderPriority"
            app:title="@string/pref_decoder_priority"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="tunneling"
            app:defaultValue="false"
            app:summary="@string/pref_tunneling_summary"
            app:title="@string/pref_tunneling" />

        <SwitchPreferenceCompat
            app:key="mapDV7ToHevc"
            app:defaultValue="false"
            app:summaryOn="@string/pref_map_dv7_on"
            app:summaryOff="@string/pref_map_dv7_off"
            app:title="@string/pref_map_dv7" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_about_header">

        <Preference
            app:key="aboutVersion"
            app:selectable="false"
            app:title="@string/app_name" />

        <Preference
            app:key="checkUpdate"
            app:title="@string/pref_update"
            app:summary="@string/pref_update_summary" />

        <Preference
            app:key="aboutProject"
            app:title="@string/pref_about_title"
            app:widgetLayout="@layout/preference_widget_github" />

    </PreferenceCategory>

</PreferenceScreen>
